--- a/InfoWeb.Presentation/wwwroot/application/directives/tree-detail-view/tree.html
+++ b/InfoWeb.Presentation/wwwroot/application/directives/tree-detail-view/tree.html
@@ -21,7 +21,7 @@
     <div ng-if="branch.isExpanded" class="tree">
         <ul class="nav nav-pills nav-stacked">
             <li class="presentation" ng-repeat="child in branch.innerAssignments">
-                <tree branch="child"></tree>
+                <tree branch="child" ng-click="onClick($event)"></tree>
             </li>
         </ul>
     </div>
