--- a/InfoWeb.Presentation/wwwroot/application/directives/hour-type/hour-type-row-directive.html
+++ b/InfoWeb.Presentation/wwwroot/application/directives/hour-type/hour-type-row-directive.html
@@ -1,7 +1,7 @@
 ﻿
 <div class="row">
     <div class="col-md-5">
-        <select ng-options="item.name for item in all" ng-model="current.hourType"
+        <select ng-options="item.name for item in all track by item.id" ng-model="current.hourType"
                 class="form-control" name="{{comboName}}" ng-change="hourTypeChanged()" required>
             <option value="">Seleccione</option>
         </select>
@@ -12,7 +12,7 @@
                name="{{textName}}" min="1" ng-change="onHourCountChanged()"/>
         <span class="text-danger" ng-show="hourError">La cantidad de horas debe ser un número mayor que 1.</span>
     </div>
-    <div class="col-md-2">      
-            <span class="glyphicon glyphicon-trash" style="cursor:pointer; top:18px;left:10px" ng-click="removeRow($event)" title="Eliminar"></span>
-    </div>
+    <div class="col-md-2">    
+        <span class="glyphicon glyphicon-trash" style="cursor:pointer; top:18px;left:10px" ng-click="removeRow($event)" title="Eliminar"></span>
+    </div>    
 </div>
