--- a/InfoWeb.Presentation/wwwroot/application/directives/hour-type/hour-type-directive.html
+++ b/InfoWeb.Presentation/wwwroot/application/directives/hour-type/hour-type-directive.html
@@ -1,7 +1,7 @@
 ﻿<button type="button" class="btn btn-default btn-info">
     <span class="glyphicon glyphicon-plus" style="margin-right:5px">
     </span>
-    Nuevo
+    Agregar Tipos de Hora 
 </button>
 <!--<table class="table table-hover">
     <thead>
@@ -11,7 +11,7 @@
         </tr>
     </thead>
     <tbody>-->
-<div >
+<div style="margin-top:10px" ng-show="projectHourTypes != null && projectHourTypes.length > 0">
     <div class="row">
         <div class="col-md-5">
             <label>Tipo de hora</label>
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div ng-repeat="cht in projectHourTypes" hour-type-row  
-         current="cht" all="hourTypes" index="{{$index}}" target-form ="targetForm">
+         current="cht" all="hourTypes" index="{{$index}}" target-form ="targetForm" style="margin-top:5px">
     </div>
 </div>
     <!--</tbody>
