--- a/InfoWeb.Presentation/wwwroot/Index.html
+++ b/InfoWeb.Presentation/wwwroot/Index.html
@@ -291,6 +291,7 @@
     <script src="application/controllers/update-project-controller.js"></script>
     <script src="application/controllers/assign-group-controller.js"></script>
     <script src="application/controllers/project-detail-modal-controller.js"></script>
+    <script src="application/controllers/remove-project-error-dialog-controller.js"></script>
 
 
 
